<resources>
    <string name="app_name">kotlinDemo</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="hint">提示</string>

    <string name="font_size">字体大小</string>
    <string name="font_10">10号字体</string>
    <string name="font_12">12号字体</string>
    <string name="font_14">14号字体</string>
    <string name="font_16">16号字体</string>
    <string name="font_18">18号字体</string>
    <string name="font_red">红色字体</string>
    <string name="font_green">绿色字体</string>
    <string name="font_blue">蓝色字体</string>
    <string name="blue_title">蓝色标题</string>
    <string name="red_title">红色标题</string>
    <string name="green_title">绿色标题</string>
    <string name="font_color">字体颜色</string>
    <string name="plain_item">普通菜单项</string>

    <string name="file_not_exist">文件不存在</string>
    <string name="warm_tip">温馨提示</string>
    <string name="not_use">暂不使用</string>
    <string name="agree_and_continue">同意并继续</string>
    <string name="permission_nofify">感谢您使用KotlinDemo！为了帮助您安全使用产品和服务，在您同意并授权的基础上，
        我们可能会收集您的身份信息、联系信息、交易信息、位置信息、设备信息等，请您在使用前务必仔细阅读并充分理解《KotlinDemo隐私政策》。
        \n\n当您点击同意，并开始使用产品和服务，即代表您已理解并同意全部条款。</string>


    <!--权限获取提示语-->
    <string name="permission_apply">权限申请</string>

    <!--相机权限-->
    <string name="camera_permission">\"APP\"想访问您的相机</string>
    <!--相机权限-申请原因说明-->
    <string name="camera_permission_message">照相设备将被用于扫码、拍照等需要使用相机的功能</string>
    <!--相机权限申请-->
    <string name="camera_permission_apply">请在设置-应用-APP-权限中开启相机权限</string>

    <!--外部存储权限-->
    <string name="external_storage_permission">\"APP\"想访问您的手机存储权限</string>
    <!--外部存储权限-申请原因说明-->
    <string name="external_storage_permission_message">手机存储权限将被用于读写文件系统业务，如图片缓存、主要功能的访问与使用</string>
    <!--外部存储权限申请-->
    <string name="external_storage_permission_apply">请在设置-应用-APP-权限中开启手机存储权限</string>

    <!--定位权限-->
    <string name="location_permission">\"APP\"想使用您的位置信息</string>
    <!--定位权限-申请原因说明-->
    <string name="location_permission_message">APP需要获取您的位置信息，用于业务处理等需要位置信息的功能</string>
    <!--定位权限申请-->
    <string name="location_permission_apply">请在设置-应用-APP-权限中开启定位权限</string>

</resources>