<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--选项菜单    -->
    <!--item元素用于定义菜单项，item元素又可包含menu元素，位于item元素内部的menu元素就代表了子菜单    -->
    <item
        android:icon="@mipmap/add_one"
        android:title="@string/font_size">
        <menu>
            <!--定义一组单选菜单项         -->
            <group android:checkableBehavior="single">
                <!-- 定义多个菜单项               -->
                <item
                    android:id="@+id/font_10"
                    android:title="@string/font_10" />
                <item
                    android:id="@+id/font_12"
                    android:title="@string/font_12" />
                <item
                    android:id="@+id/font_14"
                    android:title="@string/font_14" />
                <item
                    android:id="@+id/font_16"
                    android:title="@string/font_16" />
                <item
                    android:id="@+id/font_18"
                    android:title="@string/font_18" />

            </group>

        </menu>

    </item>

    <!--定义一个普通菜单项         -->
    <item
        android:id="@+id/plain_item"
        android:title="@string/plain_item">

    </item>

    <item
        android:icon="@mipmap/add_three"
        android:title="@string/font_color">

        <menu>
            <!--定义一组普通菜单项         -->
            <group>
                <!--定义三个菜单项         -->
                <item
                    android:id="@+id/red_font"
                    android:title="@string/font_red" />
                <item
                    android:id="@+id/green_font"
                    android:title="@string/font_green" />
                <item
                    android:id="@+id/blue_font"
                    android:title="@string/font_blue" />

            </group>

        </menu>

    </item>

</menu>